[project]
name = "PyMutSpec"
authors = [
  { name="kpotoh", email="axepon@mail.ru" },
]
description = "Mutational spectra analysis package"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/mitoclub/PyMutSpec"
"Bug Tracker" = "https://github.com/mitoclub/PyMutSpec/issues"
